--- a/src/components/Converter/Converter.scss
+++ b/src/components/Converter/Converter.scss
@@ -1,17 +1,26 @@
-.card{
+.card {
   padding: 40px;
 }
-.box{
+.box {
   display: flex;
   align-items: center;
   gap: 1vw;
   margin-bottom: 20px;
+
+  @media (max-width: 600.98px) {
+    flex-direction: column;
+    row-gap: 10px;
+  }
 }
-.convert-button{
+.convert-button {
   margin: 10px;
   padding: 40px;
   height: 50px;
 }
-.amount{
-  flex: 0 0 140px;
+.amount {
+  flex: 0 1 140px;
+  @media (max-width: 600.98px) {
+    width: 100%;
+      flex: 0 1 auto;
+  }
 }
